# Primodials

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  build_fix.patch  create_desktop_icon.ps1  fix_includes.py  imgui.ini  launch_editor.bat  launch_simulation.bat  normalize_test_names.py  push_to_github.bat  run_and_verify.ps1  test_ecs.cpp  verify_window.ps1  verify_window2.ps1  walkthrough.md
Benchmarks/: CMakeLists.txt  Matrix2Benchmarks.cpp  PointBenchmarks.cpp  QuaternionBenchmarks.cpp  ScalarBenchmarks.cpp  Vector3Benchmarks.cpp
Bots/Discord/: CMakeLists.txt
Editor/: Application.cpp  Application.hpp  CMakeLists.txt  EntityInspector.cpp  EntityInspector.hpp  Main.cpp  Renderer2D.cpp  Renderer2D.hpp  SystemProfiler.cpp  SystemProfiler.hpp
Engine/: CMakeLists.txt
Engine/AI/: CognitiveSystem.cpp  CognitiveSystem.hpp  OptimizationSystem.cpp  OptimizationSystem.hpp
Engine/AssetPipeline/: CMakeLists.txt
Engine/Biology/: BiologySystem.cpp  BiologySystem.hpp
Engine/Civilization/: CivilizationSystem.cpp  CivilizationSystem.hpp
Engine/Compute/: CMakeLists.txt
Engine/Containers/: Array.hpp  Bitset.hpp  HashMap.hpp  Pool.hpp  Queue.hpp  RingBuffer.hpp  SmallVector.hpp  Stack.hpp  Vector.hpp
Engine/Core/: Assert.hpp  Bootstrap.cpp  Bootstrap.hpp  Defer.hpp  Hash.hpp  Logger.cpp  Logger.hpp  NonCopyable.hpp  Platform.hpp  StringId.hpp  StringUtils.hpp  Time.cpp  Time.hpp  Timer.hpp  Version.hpp
Engine/ECS/: AIComponent.hpp  CareerComponent.hpp  CareerSystem.cpp  CareerSystem.hpp  CivilizationComponent.hpp  ColliderComponent.hpp  CommandBuffer.cpp  CommandBuffer.hpp  ComponentStore.hpp  ComponentTypes.hpp  Entity.hpp  GeneticsComponent.hpp  GeometryComponent.hpp  InfluenceComponent.hpp  LifecycleComponent.hpp  MindComponent.hpp  PhysicsComponent.hpp  ResourceComponent.hpp  SentinelComponent.hpp  ShapeTaxonomy.hpp  SpeciesRegistry.hpp  SpeciesSchema.cpp  SpeciesSchema.hpp  StorageComponent.hpp  System.hpp  TransformComponent.hpp  UpdateContext.hpp  World.cpp  World.hpp
Engine/ECS2/: Archetype.hpp  ArchetypeStorage.cpp  ArchetypeStorage.hpp  Chunk.hpp  CommandBuffer2.cpp  CommandBuffer2.hpp  ComponentId.hpp  ComponentRegistry.hpp  EntityId.hpp  EntityPool.hpp  Query.hpp  Resource.hpp  TypeInfo.hpp  World2.cpp  World2.hpp
Engine/Editor/: CMakeLists.txt
Engine/Influence/: InfluenceSystem.cpp  InfluenceSystem.hpp
Engine/Input/: InputCodes.hpp  InputSystem.cpp  InputSystem.hpp
Engine/Jobs/: JobSystem.cpp  JobSystem.hpp
Engine/Math/: Geometry.hpp  Math.hpp  MathUtils.cpp  MathUtils.hpp  Matrix4.cpp  Matrix4.hpp  PolygonGeometry.cpp  PolygonGeometry.hpp  Quat.hpp  Transform.hpp  Vec2.hpp  Vec3.hpp  Vec4.hpp  Vector3.hpp
Engine/Memory/: Allocator.hpp  ArenaAllocator.cpp  ArenaAllocator.hpp  FrameAllocator.hpp  FreeListAllocator.hpp  HeapAllocator.hpp  LinearAllocator.hpp  PoolAllocator.cpp  PoolAllocator.hpp  StackAllocator.hpp  TrackingAllocator.hpp
Engine/Network/: CMakeLists.txt
Engine/Networking/: DesyncVerifier.cpp  DesyncVerifier.hpp  LockstepSynchronizer.cpp  LockstepSynchronizer.hpp  PlayerInput.hpp
Engine/Optimization/: CMakeLists.txt
Engine/Physics/: ColliderComponent.hpp  PhysicsSystem.cpp  PhysicsSystem.hpp  RigidBodyComponent.hpp  SpatialHashGrid.cpp  SpatialHashGrid.hpp
Engine/Platform/: Events.cpp  Events.hpp  Gamepad.hpp  Input.cpp  Input.hpp  Keyboard.hpp  Mouse.hpp  Window.cpp  Window.hpp
Engine/Procedural/: CMakeLists.txt
Engine/Reflection/: Reflect.hpp
Engine/Rendering/: CMakeLists.txt  Renderer.hpp  RenderingSystem.cpp  RenderingSystem.hpp  SDL3Renderer.cpp  SDL3Renderer.hpp
Engine/Replay/: CMakeLists.txt
Engine/Scripting/: CMakeLists.txt
Engine/Sentinel/: SentinelSystem.cpp  SentinelSystem.hpp
Engine/Serialization/: Serializer.cpp  Serializer.hpp
Engine/Simulation/: DeterministicRng.hpp  HistoryState.hpp  ISimulationSystem.hpp  ReplaySystem.cpp  ReplaySystem.hpp  SimulationClock.cpp  SimulationClock.hpp  SimulationScheduler.cpp  SimulationScheduler.hpp  SimulationState.hpp  SplitMix64.hpp  Xoshiro256.hpp
Engine/UI/: CMakeLists.txt
Engine/Utility/: CRC32.cpp  CRC32.hpp
EngineTests/: CMakeLists.txt  ContainerTests.cpp  Main.cpp
EngineTests/AI/: CareerTests.cpp  CognitiveTests.cpp
EngineTests/AssetTests/: test_asset.cpp
EngineTests/Biology/: BiologyTests.cpp
EngineTests/Civilization/: CivilizationSystemTests.cpp
EngineTests/Core/: BootstrapTests.cpp  JobSystemTests.cpp  LoggerTests.cpp  PlatformTests.cpp
EngineTests/ECS/: EcsTests.cpp
EngineTests/ECS2/: test_archetype.cpp  test_command_buffer.cpp  test_entity.cpp  test_stress.cpp
EngineTests/GameTests/: test_achievements_roundtrip.cpp  test_steam_stub.cpp
EngineTests/Math/: GeometryTests.cpp  MathTests.cpp  Matrix2Tests.cpp  PointTests.cpp  QuaternionTests.cpp  ScalarTests.cpp  Vector3Tests.cpp
EngineTests/Memory/: AllocatorTests.cpp
EngineTests/NetworkTests/: test_network.cpp
EngineTests/Networking/: NetworkingTests.cpp
EngineTests/PerformanceTests/: test_baseline.cpp
EngineTests/PhaseETests/: test_diplomacy.cpp  test_procedural.cpp  test_replay.cpp  test_tech_tree.cpp
EngineTests/Physics/: PhysicsTests.cpp
EngineTests/ScriptingTests/: test_scripting.cpp
EngineTests/Serialization/: SerializationTests.cpp
EngineTests/SimulationTests/: test_combat.cpp  test_genetics.cpp  test_genome_decoder.cpp  test_reproduction.cpp  test_simulation_catchup.cpp  test_simulation_time.cpp  test_snapshot.cpp  test_spatial.cpp  test_speciation.cpp  test_species.cpp
EngineTests/VulkanTests/: test_vulkan.cpp
Examples/: CMakeLists.txt  Matrix2Example.cpp  PointExample.cpp  QuaternionExample.cpp  RenderingExample.cpp  ScalarExample.cpp  Vector3Example.cpp  life_demo_cmake_fragment.cmake
Examples/BasicWindow/: Main.cpp
Examples/civilization_demo/: CMakeLists.txt
Examples/editor_demo/: CMakeLists.txt
Examples/multiplayer_demo/: CMakeLists.txt
Examples/replay_demo/: CMakeLists.txt
Examples/scripted_demo/: CMakeLists.txt
Examples/simulation_demo/: CMakeLists.txt
Examples/vulkan_demo/: CMakeLists.txt
LiveOps/: CMakeLists.txt
(+494 files in other folders)
