shape_add_library(ShapeEditor
    "include/Shape/Editor/Editor.h"
    "include/Shape/Editor/EditorContext.h"
    "include/Shape/Editor/HierarchyPanel.h"
    "include/Shape/Editor/InspectorPanel.h"
    "include/Shape/Editor/ArchetypeViewer.h"
    "include/Shape/Editor/SpeciesEditor.h"
    "include/Shape/Editor/ProfilerPanel.h"
    "include/Shape/Editor/ConsolePanel.h"
    "include/Shape/Editor/SimulationView.h"
    "include/Shape/Editor/AssetBrowser.h"
    "include/Shape/Editor/TimelinePanel.h"
    "include/Shape/Editor/MemoryPanel.h"
    "src/Editor.cpp"
    "src/HierarchyPanel.cpp"
    "src/InspectorPanel.cpp"
    "src/ArchetypeViewer.cpp"
    "src/SpeciesEditor.cpp"
    "src/ProfilerPanel.cpp"
    "src/ConsolePanel.cpp"
    "src/SimulationView.cpp"
    "src/AssetBrowser.cpp"
    "src/TimelinePanel.cpp"
    "src/MemoryPanel.cpp"
)
target_link_libraries(ShapeEditor PUBLIC ShapeCore ShapeMath ShapeECS ShapeSimulation ShapeUI)
