shape_add_module(ShapeUI
    "include/Shape/UI/IOverlayUI.h"
    "include/Shape/UI/TextRenderer.h"
    "include/Shape/UI/BitmapFont.h"
    "include/Shape/UI/FontAtlas.h"
    "include/Shape/UI/GraphWidget.h"
    "include/Shape/UI/LineChart.h"
    "include/Shape/UI/ColorPicker.h"
    "include/Shape/UI/DraggableWindow.h"
    "include/Shape/UI/Style.h"
    "src/TextRenderer.cpp"
    "src/BitmapFont.cpp"
    "src/FontAtlas.cpp"
    "src/GraphWidget.cpp"
    "src/LineChart.cpp"
    "src/ColorPicker.cpp"
    "src/Style.cpp"
)
target_link_libraries(ShapeUI PUBLIC ShapeCore ShapeMath ShapeMemory ShapeRendering)
